crates/pina_macros/src/snapshots/pina_macros__tests__discriminator_u32_primitive.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[repr(u32)]
#[non_exhaustive]
#[derive(
    ::core::clone::Clone,
    ::core::marker::Copy,
    ::core::cmp::PartialEq,
    ::core::cmp::Eq
)]
pub enum U32Discriminator {
    A = 0,
    B = 1000,
    C = 2000,
}
const _: () = {
    ::core::assert!(
        ::core::mem::size_of:: < u32 > () <= ::pina::MAX_DISCRIMINATOR_SPACE,
        concat!("A discriminator with primitive `", stringify!(u32), "` (", "4",
        " bytes) exceeds `MAX_DISCRIMINATOR_SPACE` and cannot be safely used for zero-copy layouts. Supported primitives: `u8`, `u16`, `u32`, `u64`.")
    );
};
impl ::core::convert::From<U32Discriminator> for u32 {
    #[inline]
    fn from(enum_value: U32Discriminator) -> Self {
        enum_value as Self
    }
}
impl ::core::convert::TryFrom<u32> for U32Discriminator {
    type Error = ::pina::ProgramError;
    #[inline]
    fn try_from(number: u32) -> ::core::result::Result<Self, ::pina::ProgramError> {
        #![allow(non_upper_case_globals)]
        const __A: u32 = 0;
        const __B: u32 = 1000;
        const __C: u32 = 2000;
        #[deny(unreachable_patterns)]
        match number {
            __A => ::core::result::Result::Ok(Self::A),
            __B => ::core::result::Result::Ok(Self::B),
            __C => ::core::result::Result::Ok(Self::C),
            #[allow(unreachable_patterns)]
            _ => {
                ::core::result::Result::Err(
                    ::pina::PinaProgramError::InvalidDiscriminator.into(),
                )
            }
        }
    }
}
::pina::into_discriminator!(U32Discriminator, u32);
